Fixed landing page size on smaller screens

--- a/assets/sass/pages/landing.scss
+++ b/assets/sass/pages/landing.scss
@@ -1,7 +1,7 @@
 .landing-header {
   text-align: center;
   padding: 20px;
-  height: calc(100vh - 50px);
+  min-height: calc(100vh - 50px);
 
   h1 {
     margin-top: 100px;
